=== (next) ===
CHANGED: dependency maintenance

=== 2.4.8 (2021-08-14) ===
FIXED: support binary message support in JSON coder

=== 2.4.7 (2021-08-14) ===
CHANGED: dependency maintenance

=== 2.4.6 (2021-01-31) ===
CHANGED: dependency maintenance

=== 2.4.5 (2020-09-11) ===
CHANGED: dependency maintenance

=== 2.4.4 (2020-07-02) ===
CHANGED: dependency maintenance

=== 2.4.3 (2020-05-18) ===
CHANGED: dependency maintenance

=== 2.4.2 (2020-03-15) ===
CHANGED: dependency maintenance

=== 2.4.1 (2019-11-02) ===
CHANGED: deps maintenance

=== 2.4.0 (2019-11-02) ===
CHANGED: to use @futoin/specs

=== 2.3.1 (2019-09-27) ===
CHANGED: dependency maintenance

=== 2.3.0 (2019-07-17) ===
CHANGED: dependency maintenance

=== 2.2.0 (2019-01-11) ===
CHANGED: dropped Node v6 support

=== 2.1.3 (2019-01-11) ===
CHANGED: dependency maintenance

=== 2.1.2 (2018-08-17) ===
FIXED: added workaround for webpack 4.16.2+

=== 2.1.1 (2018-08-11) ===
CHANGED: dependency maintenance
FIXED: invalid AsyncSteps usage on JSON error in spec loading

=== 2.1.0 (2018-06-13) ===
CHANGED: to use "ws" instead of "faye-websockets"
CHANGED: HTTP(S) comms a limited to "commConcurrency" simultaneous connections
FIXED: to control message size for Node.js WS messages
FIXED: to support in-channel Executor's max request size
NEW: "commConcurrency" option

=== 2.0.3 (2018-06-13) ===
FIXED: to allow null for parameter value, if set in spec as default
FIXED: not to check for unknown type in incomplete mixins for import use
FIXED: to properly work with very deep import chain
NEW: more verbose error for RegExp compilation issues

=== 2.0.2 (2018-06-12) ===
FIXED: lazy compilation issue of not compiling induced types used in funcs

=== 2.0.1 (2018-06-12) ===
CHANGED: all CCM instances to use global load cache
NEW: SpecTools.globalLoadCache() feature

=== 2.0.0 (2018-06-12) ===
CHANGED: minor performance and security improvements to use sealed and frozen objects.