@@ -49,6 +49,7 @@ module.exports = function( grunt ) {
         connect: {
             server: {
                 options: {
+                    hostname: 'localhost',
                     port: 8000,
                     base: '.',
                     useAvailablePort: true,
