@@ -21,7 +21,7 @@
 
 const crypto = require( 'crypto' );
 const fs = require( 'fs' );
-const $as_request = require( 'futoin-request' );
+const tinyJsonHttp = require( 'tiny-json-http' );
 const Ajv = ( () => {
     if ( process.env.NODE_ENV === 'production' ) {
         return null;
@@ -67,12 +67,14 @@ module.exports = ( spectools ) => {
 
             if ( uri.substr( 0, 4 ) === 'http' ) {
                 as.add(
-                    ( as ) => $as_request( as, uri ),
+                    ( as ) => as.await( tinyJsonHttp.get( { url: uri } ) ),
                     ( as, err ) => {
                         as.continue();
                     }
                 );
-                as.add( ( as, _, data ) => parse_data( as, data ) );
+                as.add( ( as, data ) => {
+                    as.success( data.body );
+                } );
             } else {
                 fs.readFile(
                     uri,
