@@ -1,4 +1,5 @@
 === (next) ===
+CHANGED: dropped obsolete "request" module dependency
 CHANGED: dependency maintenance
 
 === 2.4.8 (2021-08-14) ===
